2010-09-16  Daniel Cheng  <dcheng@chromium.org>

Reviewed by Simon Fraser.

        [chromium] Fix incorrect drag node/selection painting.
        https://bugs.webkit.org/show_bug.cgi?id=45573

        Drag selections were being incorrectly clipped when dragging a selection
        near the bottom of a page that was taller than the viewport. To fix
        this, we use paintContents() instead of paint().

        * page/chromium/FrameChromium.cpp:
        (WebCore::Frame::nodeImage):
        (WebCore::Frame::dragImageForSelection):

Canonical link: https://commits.webkit.org/58368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67645 268f45cc-cd09-0410-ab3c-d52691b4dbfc